--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 	<html lang="en-us">
 	<head>
-	<m="UTF-8">
+	<meta charset="UTF-8">
 	<title>Ramya2902.GitHub.io by Ramya Bhamidipati</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
@@ -10,7 +10,10 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
 
 	<link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-
+<style>	body {
+	                     background-color: lightblue;
+			                                        }
+								</style>
 	</head>
 	<body>
 	<section class="page-header">
@@ -20,9 +23,9 @@
 	
 	<section class="main-content">
 	<h3>
-	<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-	
-	<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If youre using GitHub Desktop, simply sync your repository and youll see the new branch.</p>
+	<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Details.</h3>
+
+	<p>This page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If youre using GitHub Desktop, simply sync your repository and youll see the new branch.</p>
 	
 	<h3>
 	<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
@@ -51,8 +54,8 @@
 
 	</footer>
 	
+		</section>
 	</section>
-	
 	
 	</body>
 	</html>
